--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Github action to snyk test and monitor pnpm projects",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
-    "start": "node dist/index.js",
-    "prebuild": "rm -rf dist",
-    "build": "npm run prebuild && tsc",
-    "build-watch": "tsc -w"
+    "fmt": "prettier --write .",
+    "fmt:check": "prettier --check .",
+    "typecheck": "tsc",
+    "lint": "eslint \"**/*.ts\" --cache",
+    "build": "ncc build src/lib/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "@actions/github": "^2.1.1",
     "@pnpm/lockfile-file": "^1.1.3",
     "@pnpm/types": "^3.2.0",
+    "@vercel/ncc": "^0.33.1",
     "read-yaml-file": "^1.1.0",
     "snyk": "^1.319.0",
     "snyk-delta": "^1.0.15",
