--- a/package.json
+++ b/package.json
@@ -32,8 +32,16 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.3",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
+    "eslint": "8.7.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
     "jest": "^25.1.0",
     "nock": "^12.0.2",
+    "prettier": "2.5.1",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   }
