--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "fmt:check": "prettier --check .",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.ts\" --cache",
-    "build": "ncc build src/lib/index.ts"
+    "build": "ncc build src/lib/index.ts",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
