--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "fmt:check": "prettier --check .",
     "typecheck": "tsc",
     "lint": "eslint \"**/*.ts\" --cache",
-    "build": "ncc build src/lib/index.ts",
-    "start": "node dist/index.js"
+    "build": "ncc build src/lib/index.ts"
   },
   "repository": {
     "type": "git",
@@ -27,8 +26,8 @@
     "@pnpm/types": "^3.2.0",
     "@vercel/ncc": "^0.33.1",
     "read-yaml-file": "^1.1.0",
-    "snyk": "^1.319.0",
-    "snyk-delta": "^1.0.15",
+    "snyk": "^1.833.0",
+    "snyk-delta": "^1.5.4",
     "write-file-atomic": "^3.0.0"
   },
   "devDependencies": {
